security_def/network_policy_calico_1.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: access.frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: backend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
