security_def/network_policy_simple_1.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: access-world
spec:
  podSelector:
    matchLabels:
      tier: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
